Classe Rocher ajout de get et set. Enum EtatRocher & Commande finit.
Methode chargerNiveau() --> terminé
        etatFinal() --> terminé
        afficher() --> terminé
        jouer() --> terminé

Attributs ajoutés :
          private int tailleVerticale;
          private int tailleHorizontale;
          private int totalPomme = 0;
          private int totalDeplacement = 0;
          private boolean finito;

Julien Adami m'a aidé à me débloquer !